--- a/src/Custom/WebBundle/Resources/views/Course/header.html.twig
+++ b/src/Custom/WebBundle/Resources/views/Course/header.html.twig
@@ -84,13 +84,15 @@
         {% endif %}
       {% endif %}
 
-      <div class="btn-group">
-        <button class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown">{{'预览'|trans}} <span class="caret"></span></button>
-        <ul class="dropdown-menu pull-right">
-          <li><a href="{{ path('course_show', {id:course.id, previewAs:'member'}) }}" target="_blank">{{'作为 已购买用户'|trans}}</a></li>
-          <li><a href="{{ path('course_show', {id:course.id, previewAs:'guest'}) }}" target="_blank">{{'作为 未购买用户'|trans}}</a></li>
-        </ul>
-      </div>
+      {% if 'ROLE_CENTER_ADMIN' not in app.user.roles %}
+        <div class="btn-group">
+          <button class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown">{{'预览'|trans}} <span class="caret"></span></button>
+          <ul class="dropdown-menu pull-right">
+            <li><a href="{{ path('course_show', {id:course.id, previewAs:'member'}) }}" target="_blank">{{'作为 已购买用户'|trans}}</a></li>
+            <li><a href="{{ path('course_show', {id:course.id, previewAs:'guest'}) }}" target="_blank">{{'作为 未购买用户'|trans}}</a></li>
+          </ul>
+        </div>
+      {% endif %}
 
       {% if course.status != 'published' %}
         {% if 'ROLE_CENTER_ADMIN' not in app.user.roles %}
