--- a/src/Custom/WebBundle/Resources/views/Default/header.html.twig
+++ b/src/Custom/WebBundle/Resources/views/Default/header.html.twig
@@ -14,7 +14,7 @@
       <div class="navbar-user {% if setting('esBar.enabled', 0) %} left {% endif %}">
         <ul class="nav user-nav">
           <li class="back-home translator" style="margin-top: 20px">
-            <button type="button" class="btn btn-sm btn-info dropdown-toggle" data-toggle="dropdown">
+            <button type="button" class="btn btn-sm btn-default dropdown-toggle" data-toggle="dropdown">
               {% if local == 'en_US' %}
                 {{'英文'|trans}}
               {% else %}
