--- a/src/Custom/WebBundle/Resources/views/Default/header.html.twig
+++ b/src/Custom/WebBundle/Resources/views/Default/header.html.twig
@@ -13,23 +13,25 @@
     <nav class="collapse navbar-collapse">
       <div class="navbar-user {% if setting('esBar.enabled', 0) %} left {% endif %}">
         <ul class="nav user-nav">
-          <li class="back-home translator" style="margin-top: 20px">
-            <button type="button" class="btn btn-sm btn-default dropdown-toggle" data-toggle="dropdown">
-              {% if local == 'en_US' %}
-                {{'英文'|trans}}
-              {% else %}
-                {{'中文'|trans}}
-              {% endif %}
-              <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu" role="menu">
-              {% if local == 'en_US' %}
-                <li class="chinese"><a href="switch/language?language=zh_CN&_target_path=%2F">{{'中文'|trans}}</a></li>
-              {% else %}
-                <li class="english"><a href="switch/language?language=en_US&_target_path=%2F">{{'英文'|trans}}</a></li>
-              {% endif %}
-            </ul>
-          </li>
+          {% if local|default() %}
+            <li class="back-home translator" style="margin-top: 20px">
+              <button type="button" class="btn btn-sm btn-default dropdown-toggle" data-toggle="dropdown">
+                {% if local == 'en_US' %}
+                  {{'英文'|trans}}
+                {% else %}
+                  {{'中文'|trans}}
+                {% endif %}
+                <span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu" role="menu">
+                {% if local == 'en_US' %}
+                  <li class="chinese"><a href="switch/language?language=zh_CN&_target_path=%2F">{{'中文'|trans}}</a></li>
+                {% else %}
+                  <li class="english"><a href="switch/language?language=en_US&_target_path=%2F">{{'英文'|trans}}</a></li>
+                {% endif %}
+              </ul>
+            </li>
+          {% endif %}
           <li class="back-home"><a href="{{ path('homepage') }}"> <i class="iconfont icon-shouye"></i> </a></li>
           {% if app.user %}
           <li class="user-avatar-li nav-hover">
