--- a/src/Custom/WebBundle/Resources/views/Default/header.html.twig
+++ b/src/Custom/WebBundle/Resources/views/Default/header.html.twig
@@ -25,9 +25,9 @@
               </button>
               <ul class="dropdown-menu" role="menu">
                 {% if local == 'en_US' %}
-                  <li class="chinese"><a href="switch/language?language=zh_CN&_target_path=%2F">{{'中文'|trans}}</a></li>
+                  <li class="chinese"><a href="switch/language?language=zh_CN&_target_path=%2F">{{'中文'}}</a></li>
                 {% else %}
-                  <li class="english"><a href="switch/language?language=en_US&_target_path=%2F">{{'英文'|trans}}</a></li>
+                  <li class="english"><a href="switch/language?language=en_US&_target_path=%2F">{{'English'}}</a></li>
                 {% endif %}
               </ul>
             </li>
