--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/app-im-setting.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/app-im-setting.html.twig
@@ -1,16 +1,11 @@
 {% extends 'TopxiaAdminBundle::layout.html.twig' %}
 
-{% set menu = 'admin_app_im' %}
+{% set menu = 'admin_app_im_setting' %}
 {% set script_controller = 'setting/app-im' %}
 
 {% block main %}
 
   {{ web_macro.flash_messages() }}
-
-  <div class="page-header clearfix">
-    <h1 class="pull-left">即时聊天</h1>
-  </div>
-
 
   {% if is_trial() %}
     <div class="row form-group">
