--- a/web/assets/v2/less/page/open-course.less
+++ b/web/assets/v2/less/page/open-course.less
@@ -1,3 +1,6 @@
+.embed-responsive-16by9.masks{
+		z-index: 99;
+	}
 .breadcrumb.open-course-breadcrumb{
 	margin: -30px 0 0;
   background: transparent;
@@ -357,6 +360,7 @@
 	.lesson-content { 
 		height: 100%;
 	}
+	
 	.mask {
 		position: absolute;
 		left: 0;
