--- a/web/assets/v2/css/main-purple.css
+++ b/web/assets/v2/css/main-purple.css
@@ -3357,7 +3357,7 @@ Pagination Styles
 }
 .ps-container .ps-scrollbar-x-rail:hover .ps-scrollbar-x,
 .ps-container .ps-scrollbar-x-rail.hover .ps-scrollbar-x {
-  background-color: #999;
+  background-color: #999999;
 }
 .ps-container .ps-scrollbar-y {
   position: absolute;
@@ -3377,7 +3377,7 @@ Pagination Styles
 }
 .ps-container .ps-scrollbar-y-rail:hover .ps-scrollbar-y,
 .ps-container .ps-scrollbar-y-rail.hover .ps-scrollbar-y {
-  background-color: #999;
+  background-color: #999999;
 }
 .ps-container.ie .ps-scrollbar-x,
 .ps-container.ie .ps-scrollbar-y {
@@ -10910,7 +10910,7 @@ textarea {
   min-height: 500px;
 }
 .loading-background {
-  background: #fff url('../img/old/loader.gif') no-repeat center center;
+  background: #ffffff url('../img/old/loader.gif') no-repeat center center;
 }
 .slide-player-watermark {
   position: absolute;
@@ -13630,6 +13630,9 @@ textarea {
 .live-course-body .es-live-all .media-body .other a {
   position: absolute;
   right: 0;
+}
+.embed-responsive-16by9.masks {
+  z-index: 99;
 }
 .breadcrumb.open-course-breadcrumb {
   margin: -30px 0 0;
