--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/app-im-setting.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/app-im-setting.html.twig
@@ -11,8 +11,8 @@
     <div class="row form-group">
       <div class="help-block">
         </br></br>
-        <p style="text-align:center;font-size:16px">即时聊天服务由EduSoho教育云提供 
-          <a href="http://open.edusoho.com/educloud" target="_blank">了解详情</a>
+        <p style="text-align:center;font-size:16px">{{'即时聊天服务由EduSoho教育云提供'|trans}} 
+          <a href="http://open.edusoho.com/educloud" target="_blank">{{'了解详情'|trans}}</a>
         </p>
         </br>
       </div>
@@ -26,35 +26,35 @@
       <div class="row form-group search-button">
         {% if data.status == 'unconnect' %}
           <div class="col-md-2">
-            <button type="submit" class="btn btn-default" name="upload_mode" value="cloud" disabled="disabled">开启即时聊天
+            <button type="submit" class="btn btn-default" name="upload_mode" value="cloud" disabled="disabled">{{'开启即时聊天'|trans}}
             </button>
           </div>
           <div class="col-md-10">
-            <span class="text-danger text-sm">抱歉，您尚未接入教育云，不能使用即时聊天服务！</span>
-            <p><a href="http://open.edusoho.com/educloud" target="_blank">立即接入</a></p>
+            <span class="text-danger text-sm">{{'抱歉，您尚未接入教育云，不能使用即时聊天服务！'|trans}}</span>
+            <p><a href="http://open.edusoho.com/educloud" target="_blank">{{'立即接入'|trans}}</a></p>
           </div>
         {% else %}
           {% if not setting('app_im.enabled') %}
             <div class="col-md-2 control-cloud">
-              <a class="btn btn-primary mhs app-im-open" href="{{ path('admin_app_im_update') }}" data-status="1">开启即时聊天</a>
+              <a class="btn btn-primary mhs app-im-open" href="{{ path('admin_app_im_update') }}" data-status="1">{{'开启即时聊天'|trans}}</a>
             </div>
           {% else %}
             <div class="col-md-2 control-cloud success">
-              <span class="text-success">已开启</span>
+              <span class="text-success">{{'已开启'|trans}}</span>
             </div>
             <div class="controls col-md-8 cloud-warning">
-              <a class="btn btn-default btn-sm mhs app-im-close" href="{{ path('admin_app_im_update') }}" data-status="0">关闭</a>
+              <a class="btn btn-default btn-sm mhs app-im-close" href="{{ path('admin_app_im_update') }}" data-status="0">{{'关闭'|trans}}</a>
             </div>
           {% endif %}
         {% endif %}
       </div>
 
-      <h4>IM功能说明</h4>
+      <h4>{{'IM功能说明'|trans}}</h4>
 
-      开启后，课程和班级会生成相应即时聊天讨论组和使用个人聊天功能；<br>
-      利于老师发布课程、班级的相关信息并且及时、有效的通知到学生；<br>
-      利于师生无障碍的针对课程、班级的内容进行沟通和交流；<br>
-      利于促进学生之间的交流，提高网校活跃度；<br>
+      {{'开启后，课程和班级会生成相应即时聊天讨论组和使用个人聊天功能；'|trans}}<br>
+      {{'利于老师发布课程、班级的相关信息并且及时、有效的通知到学生；'|trans}}<br>
+      {{'利于师生无障碍的针对课程、班级的内容进行沟通和交流；'|trans}}<br>
+      {{'利于促进学生之间的交流，提高网校活跃度；'|trans}}<br>
 
 
     </form>
