--- a/src/Custom/WebBundle/Resources/views/layout.html.twig
+++ b/src/Custom/WebBundle/Resources/views/layout.html.twig
@@ -4,6 +4,7 @@
 <!--[if IE 7]>         <html class="lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html> <!--<![endif]-->
+<html lang="{{ app.request.getLocale() }}">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,Chrome=1">
