feature: user info custom field add filter

--- a/src/Topxia/AdminBundle/Resources/views/User/show-modal.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/User/show-modal.html.twig
@@ -270,7 +270,7 @@
             {% if field.type=="date"%}
             {{ profile[field.fieldName]|date("Y-m-d") }}
             {% else %}
-            {{ profile[field.fieldName] }}
+            {{ profile[field.fieldName]|space2nbsp|raw|nl2br }}
             {% endif %}
           {% else %}
             {{'暂无'|trans}}
