--- a/web/assets/css/common.css
+++ b/web/assets/css/common.css
@@ -1912,6 +1912,7 @@ tr.placeholder:before {
 .list-table .td {
   line-height: 45px;
   height: 45px;
+  word-break: break-all;
 }
 .list-table-tree-icon {
   display: inline-block;
