course-delete-conversation-delete

--- a/src/Topxia/AdminBundle/Resources/views/Course/delete.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Course/delete.html.twig
@@ -42,7 +42,8 @@
   data-announcement-delete-url="{{ path('admin_course_delete',{courseId:course.id,type:'announcements'}) }}"
   data-status-delete-url="{{ path('admin_course_delete',{courseId:course.id,type:'statuses'}) }}"
   data-member-delete-url="{{ path('admin_course_delete',{courseId:course.id,type:'members'}) }}"
-  data-course-delete-url="{{ path('admin_course_delete',{courseId:course.id,type:'course'}) }}"
+  data-conversation-delete-url="{{ path('admin_course_delete',{courseId:course.id,type:'conversation'}) }}"
+  data-course-delete-url="{{ path('admin_course_delete',{courseId:course.id,type:'course'}) }}" 
   >提交</button>
   <button type="button" class="btn btn-link pull-right btn-closed" data-dismiss="modal">{{'取消'|trans}}</button>
 
